--- a/index.html
+++ b/index.html
@@ -19,15 +19,29 @@
                 <li><a href="Aulas">Aulas</a></li>
                 <li><a href="Agenda">Agenda</a></li>
                 <li><a href="Contato">Contato</a></li>
-                <p>facebook</p> 
-                <p>instagram</p>
-        </ul>
+                <li><a href="https://www.facebook.com/sua-página" target="_blank">
+                    <img src="https://www.facebook.com/images/fb_icon_325x325.png" alt="Ícone do Facebook em branco" style="width:30px;height:30px;border:0;"></a>
+                </li>
+                <li><a href="https://www.instagram.com/sua-conta/" target="_blank">
+                    <img src="https://www.instagram.com/static/images/ico/favicon-192.png/68d99ba29cc8.png" alt="Ícone do Instagram em branco" style="width:30px;height:30px;border:0;"></a>
+                </li>
+            </ul>
         </nav>
 
     </header>
 
     <section>
-        <h1> </h1>
+        <div class="texto">
+            <h1>
+                "Transforme o seu suor em resultados e alcance o seu melhor desempenho físico.
+                Comece hoje mesmo e descubra a força que existe dentro de você!"
+            </h1>
+        </div>
+
+        <div class="botoes">
+            <input type="button" name="agendamento" class="agendamento" value="Agendar aula experimental">
+            <input type="button" name="contato" class="contato" value="Contato Personal trainer">
+        </div>
     </section>
 </body>
 </html>
