--- a/index.html
+++ b/index.html
@@ -52,15 +52,18 @@
 
             <div class="caixa_planos">
                 <div class="basic">
-                    Basic
+                    <p id="txt1">Mensal </p>
+                    <p>R$ 99,99 </p>
                 </div>
                 
                 <div class="plus">
-                    Plus
+                    <p id="txt1">Plano Trimestral</p>
+                    <p>R$ 79,99</p>
                 </div>
 
                 <div class="extreme">
-                    Extreme            
+                    <p id="txt1">Plano Anual</p>
+                    <p id="prc1">R$ 59,99</p>  
                 </div>
             </div>
 
