--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             </div>
 
             <div class="botoes">            
-                <button onclick="agenda()" class="agendamento">Agendar aula experimental</button>
-                <button onclick="planos()" class="contato">Conheça nossos planos</button>
+                <button onclick="agenda()" class="agendamento">Agende uma aula experimental</button>
+                <button onclick="pacotes()" class="contato">Conheça nossos planos</button>
             </div>
             
         </section>
