--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="master">
+    <div class="in">
         <header>
             <div class="name">
                 Power Health Fitness
@@ -48,22 +48,34 @@
 
         <section class="planos">
 
-            <div class="caixa_planos">
-                <div class="basic">
-                    <p id="txt1">Mensal </p>
-                    <p>R$ 99,99 </p>
-                </div>
+            <div class="caixa_planos">               
                 
-                <div class="plus">
-                    <p id="txt1">Plano Trimestral</p>
-                    <p>R$ 79,99</p>
+                <div class="ligth">
+                    <p id="txt1">Plano Ligth</p>
+                    <p>Apartir de R$ 99,99</p>
+                    <li>Horário livre</li>
+                    <li>Ginástica e dança</li>
+                    <li>Acesso Premim</li>
+                    <li>Cardio Intense</li>                
                 </div>
 
-                <div class="extreme">
-                    <p id="txt1">Plano Anual</p>
-                    <p id="prc1">R$ 59,99</p>  
+                <div class="plus">
+                    <p id="txt1">Plano Plus </p>
+                    <p>Apartir de R$ 99,99 </p>
+                    <li>Horário livre</li>
+                    <li>Ginástica e dança</li>
+                    <li>Acesso Premim</li>
+                    <li>Cardio Intense</li>        
                 </div>
-            </div>
+
+                <div class="master">
+                    <p id="txt1">Plano master</p>
+                    <p>Apartir de R$ 99,99 </p>
+                    <li>Horário livre</li>
+                    <li>Ginástica e dança</li>
+                    <li>Acesso Premim</li>
+                    <li>Cardio Intense</li>                   
+                </div>
 
         </section>
 
@@ -78,7 +90,8 @@
     </section>
 
     <section class="localidade">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3959.314127675224!2d-34.83965162603467!3d-7.089537869498073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7acdd0a7a666853%3A0xdccfacd1290e82ec!2sAcademia%20Korpus%20Bessa!5e0!3m2!1spt-BR!2sbr!4v1683550792998!5m2!1spt-BR!2sbr" 
+        <h2>Nossa localização</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d37669.32512741044!2d-34.85450593399853!3d-7.067871099162198!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1683670655010!5m2!1spt-BR!2sbr" 
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
@@ -133,6 +146,8 @@
                 <option value="Cabaceiras">Cabaceiras</option>
             </select>
             <input type="datetime-local" class="input-padrao" required placeholder="Escolha a melhor Data">
+
+            <button type="submit" class="input-enviar">ENVIAR</button>
         </form> 
 
         <footer>
