--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
                     <p id="txt1">Plano Ligth</p>
                     <p>Apartir de R$ 99,99</p>
                     <li>Horário livre</li>
-                    <li>Ginástica e dança</li>
-                    <li>Acesso Premim</li>
-                    <li>Cardio Intense</li>                
+                    <li>Acesso Premium</li>
+                                   
                 </div>
 
                 <div class="plus">
@@ -64,7 +63,7 @@
                     <p>Apartir de R$ 99,99 </p>
                     <li>Horário livre</li>
                     <li>Ginástica e dança</li>
-                    <li>Acesso Premim</li>
+                    <li>Acesso Premium</li>
                     <li>Cardio Intense</li>        
                 </div>
 
@@ -73,8 +72,9 @@
                     <p>Apartir de R$ 99,99 </p>
                     <li>Horário livre</li>
                     <li>Ginástica e dança</li>
-                    <li>Acesso Premim</li>
-                    <li>Cardio Intense</li>                   
+                    <li>Acesso Premium</li>
+                    <li>Cardio Intense</li>
+                    <li>Power beach</li>                   
                 </div>
 
         </section>
@@ -100,7 +100,7 @@
             <p clas="txt3">Agende agora sua aula experimental</p>
             <input type="text" name="nomeesobrenome" class="input-padrao" required placeholder="Nome e sobrenome">
 
-            <input type="tel" name="telefone" class="input-padrao" required placeholder="(xx) xxxxx-xxxx">
+            <input type="tel" name="telefone" class="input-padrao" required placeholder="Tel (xx) xxxxx-xxxx">
 
             <label for="cidades">Informe sua CIDADE</label>
             <select class="cidades" name="cidades">
